<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TableRow
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_linear_layout"
                android:layout_width="wrap_content"
                android:layout_height="92dp"
                android:background="@drawable/ic_launcher_background"
                android:text="@string/_1"
                android:textSize="20sp"
                app:backgroundTint="@null" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/linear_layout"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:layout_height="112dp"
            android:layout_marginStart="16dp"
            android:gravity="center"
            android:orientation="vertical"
            android:background="@color/cardview_shadow_end_color">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="85dp"
                android:background="@drawable/ic_launcher_background"
                android:text="@string/_2"
                android:textSize="20sp"
                app:backgroundTint="@null" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/relative_layout"
                android:textStyle="bold"/>

        </LinearLayout>

    </TableRow>

    <TableRow
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            >

            <Button
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:text="@string/_4"
                android:textSize="20sp"
                app:backgroundTint="@null"
                android:background="@drawable/ic_launcher_background" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/frame_layout"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="114dp"
            android:layout_marginStart="16dp"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:background="@drawable/ic_launcher_background"
                android:text="@string/_5"
                android:textSize="20sp"
                app:backgroundTint="@null" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/table_layout"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="125dp"
            android:layout_marginStart="16dp"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="85dp"
                android:background="@drawable/ic_launcher_background"
                android:text="@string/_6"
                android:textSize="20sp"
                app:backgroundTint="@null" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/material_design"
                android:textStyle="bold"/>

        </LinearLayout>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:gravity="top"
            android:orientation="vertical">

            <Button
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:background="@drawable/ic_launcher_background"
                android:text="@string/_7"
                android:textSize="20sp"
                app:backgroundTint="@null" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scroll_view"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginStart="16dp"
            android:gravity="center|top"
            android:orientation="vertical">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="85dp"
                android:background="@drawable/ic_launcher_background"
                android:text="@string/_8"
                android:textSize="20sp"
                app:backgroundTint="@null" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scroll_view_horizontal"
                android:textAlignment="center"
                android:textStyle="bold" />

        </LinearLayout>

    </TableRow>

</TableLayout>